syntax = "proto3";

package com.huawei.fit.hakuna.system.exception;

option optimize_for = LITE_RUNTIME;
option java_package = "com.huawei.fit.hakuna.system.exception.proto";
option java_outer_classname = "FitWebResponseProto";



message WebResponse {
  int32 httpCode = 1;
  map<string, string> responseHeaders = 2;
  string responseBody = 3;
}